--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ html
         -2px -2px 5px black, 1px 1px 0 #000; ;
     color: whitesmoke;
 }
-.preview-image-holder
+.preview-img-holder
 {
     position: relative;
     width: 100%;
@@ -87,3 +87,18 @@ html
     font-family: "Dure Sans", sans-serif;
 }
 
+.normal-link
+{
+    height: 40px;
+    width: 550px;
+    color: white;
+    padding-left: 30px;
+    padding-top: 15px;
+    text-shadow: 1px 1px #000;
+    text-align: left;
+    float: left;
+    font-size: 1em;
+    font-weight: bold;
+    line-height: 1;
+    font-family: "Dure Sans", sans-serif;
+}
